# ImageProcessing

./: .gitignore  CMakeLists.txt  ColorMatrix.cpp  ColorMatrix.h  Doxyfile  ImageProcessing  ImageProcessing.cpp  README.md  imageProcessing.cpp  main.cpp
Docs/: TODO.txt
Docs/html/: ColorData_8cpp.html  ColorData_8h.html  ColorData_8h_source.html  ContrastBrightness_8cpp.html  ContrastBrightness_8h.html  ContrastBrightness_8h_source.html  Convolution_8cpp.html  Convolution_8h.html  Convolution_8h_source.html  Draw_8cpp.html  Draw_8h.html  Draw_8h_source.html  Gamma_8cpp.html  Gamma_8h.html  Gamma_8h_source.html  ImageProcessing_8cpp.html  ImageProcessing_8h.html  ImageProcessing_8h_source.html  Image_8cpp.html  Image_8h.html  Image_8h_source.html  Kernels_8cpp.html  Kernels_8h.html  Kernels_8h_source.html  Point_8cpp.html  Point_8h.html  Point_8h_source.html  PortablePixMap__Plain_8cpp.html  PortablePixMap__Plain_8h.html  PortablePixMap__Plain_8h_source.html  README_8md.html  Rectangle_8cpp.html  Rectangle_8h.html  Rectangle_8h_source.html  RgbColor_8cpp.html  RgbColor_8h.html  RgbColor_8h_source.html  Vector2_8h.html  Vector2_8h_source.html  annotated.html  (+105 more)
Docs/latex/: ColorData_8cpp.tex  ColorData_8h.tex  ColorData_8h_source.tex  ContrastBrightness_8cpp.tex  ContrastBrightness_8h.tex  ContrastBrightness_8h_source.tex  Convolution_8cpp.tex  Convolution_8h.tex  Convolution_8h_source.tex  Draw_8cpp.tex  Draw_8h.tex  Draw_8h_source.tex  Gamma_8cpp.tex  Gamma_8h.tex  Gamma_8h_source.tex  ImageProcessing_8cpp.tex  ImageProcessing_8h.tex  ImageProcessing_8h_source.tex  Image_8cpp.tex  Image_8h.tex  Image_8h_source.tex  Kernels_8cpp.tex  Kernels_8h.tex  Kernels_8h_source.tex  Point_8cpp.tex  Point_8h.tex  Point_8h_source.tex  PortablePixMap__Plain_8cpp.tex  PortablePixMap__Plain_8h.tex  PortablePixMap__Plain_8h_source.tex  Rectangle_8cpp.tex  Rectangle_8h.tex  Rectangle_8h_source.tex  RgbColor_8cpp.tex  RgbColor_8h.tex  RgbColor_8h_source.tex  Vector2_8h.tex  Vector2_8h_source.tex  annotated.tex  builds_2cmake-debug_2CMakeFiles_23_824_82_2CompilerIdCXX_2CMakeCXXCompilerId_8cpp.tex  (+81 more)
Libs/: CMakeLists.txt
Libs/Draw/: Draw.cpp  Draw.h
Libs/Image/: ColorData.cpp  ColorData.h  Image.cpp  Image.h  ImageData.cpp  ImageData.h  PortablePixMap_Plain.cpp  PortablePixMap_Plain.h
Libs/Processing/: ContrastBrightness.cpp  ContrastBrightness.h  Convolution.cpp  Convolution.h  Gamma.cpp  Gamma.h  ImageProcessing.h  Kernels.cpp  Kernels.h
Libs/Tools/: Point.cpp  Point.h  Rectangle.cpp  Rectangle.h  RgbColor.cpp  RgbColor.h  Vector2.cpp  Vector2.h  Vector3.cpp
Tests/: CMakeLists.txt  test.cpp
Tests/Draw/: test_Draw.cpp
Tests/Image/: test_ColorData.cpp  test_Image.cpp  test_ImageData.cpp  test_PortablePixMap_Plain.cpp
Tests/Processing/: test_ContrastBrightness.cpp  test_Convolution.cpp  test_Gamma.cpp  test_Kernels.cpp
Tests/Tools/: test_Rectangle.cpp  test_RgbColor.cpp  test_Vector2.cpp
libs/: ColorData.cpp  ColorData.h  ColorMatrix.cpp  ColorMatrix.h  Image.cpp  Image.h  PortablePixMap_Plain.cpp  PortablePixMap_Plain.h
libs/Draw/: Draw.cpp
libs/Image/: ColorData.h
libs/Processing/: ContrastBrightness.h  Convolution.h  Gamma.h
libs/Tools/: Rectangle.cpp  RgbColor.h  Vector3.h
libs/tools/: Rectangle.cpp  Rectangle.h  RgbColor.cpp  RgbColor.h  (+2 more)
(+74 files in other folders)
