add_library(Libs
            Image/PortablePixMap_Plain.cpp Image/Image.cpp Image/ColorData.cpp
            Tools/RgbColor.cpp Tools/Rectangle.cpp
            Processing/ImageProcessing.cpp Processing/ContrastBrightness.cpp Processing/Gamma.cpp
            Processing/Convolution.cpp
            Draw/Draw.cpp Processing/Kernels.cpp Processing/Kernels.h)
